--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,12 @@ Title: Boyd tools
 Version: 0.3
 Authors@R: "Don Boyd <donboyd5@gmail.com> [aut, cre]"
 Description: General text and data management tools
-Depends:
+Depends: 
     R (>= 3.1.0),
     zoo
 License: What license is it under?
 LazyData: true
+Imports: dplyr,
+    lubridate,
+    readr,
+    stringr
