--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,8 +14,8 @@ export(qtiledf)
 export(qy)
 export(stldf)
 export(sum4)
+export(trim.ws)
 export(trimlead)
 export(trimtrail)
-export(trimws)
 export(zpad)
 import(dplyr)
